objects/Case_Tracking_History__c.object
<CustomObject>
    <fields>
        <fullName>Case_Waiting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Waiting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Tracking History</relationshipLabel>
        <relationshipName>Case_Tracking_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Priority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reason</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Days__c</fullName>
        <formula>IF( !ISBLANK(Finished_on__c), FLOOR(Finished_on__c - Started_On__c), FLOOR(now() - Started_On__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finished_on__c</fullName>
        <label>Finished on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <formula>IF( !ISBLANK(Finished_on__c), FLOOR(MOD((Finished_on__c - Started_On__c)*24,24)), FLOOR(MOD((now() - Started_On__c)*24,24)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Main_Field_Current_Value__c</fullName>
        <label>Main Field Current Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Field_Prior_Value__c</fullName>
        <label>Main Field Prior Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Field__c</fullName>
        <label>Main Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minutes__c</fullName>
        <formula>IF( !ISBLANK(Finished_on__c), FLOOR(MOD((Finished_on__c - Started_On__c)*24*60,60)), FLOOR(MOD((now() - Started_On__c)*24*60,60)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Field_Current_Value__c</fullName>
        <label>Secondary Field Current Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Field_Prior_Value__c</fullName>
        <label>Secondary Field Prior Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Field__c</fullName>
        <label>Secondary Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Started_On__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Started On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_length__c</fullName>
        <formula>TEXT(Days__c) &amp; &apos; days &apos; &amp; TEXT( Hours__c) &amp; &apos; hours &apos; &amp; TEXT(Minutes__c ) &amp; &apos; minutes&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time length</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Tracking_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Case Tracking History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CHT-{00000000}</displayFormat>
        <label>Case Tracking History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Tracking History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>User_field_requiered</fullName>
        <active>true</active>
        <description>User field must be populated.</description>
        <errorConditionFormula>ISBLANK( User__c )</errorConditionFormula>
        <errorDisplayField>User__c</errorDisplayField>
        <errorMessage>User field must be populated.</errorMessage>
    </validationRules>
</CustomObject>